--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,7 +4,7 @@
 
 :root {
   --background: #101010;
-  --foreground: #b0b0b0;
+  --foreground: #999999;
 }
 
 body {
@@ -38,11 +38,11 @@ body {
 }
 
 .prose pre {
-  @apply overflow-x-auto border border-neutral-800 bg-[#101010] my-4 rounded-none;
+  @apply overflow-x-auto border border-vesper-border bg-vesper-bg my-4 rounded-none;
 }
 
 .prose code:not(pre code) {
-  @apply px-1 py-0.5 text-sm border border-gray-700 rounded text-gray-200;
+  @apply px-1 py-0.5 text-sm border border-vesper-border rounded text-vesper-text;
 }
 
 .prose code:not(pre code)::before,
@@ -57,5 +57,5 @@ body {
 }
 
 .prose code span {
-  @apply font-medium text-gray-200;
+  @apply font-medium text-vesper-text;
 }
