--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,6 +5,7 @@
 body {
   color: theme('colors.secondary');
   background: theme('colors.background');
+  @apply text-sm sm:text-base;
 }
 
 .prose a:not(.anchor) {
@@ -29,7 +30,7 @@ body {
 }
 
 .prose pre code {
-  @apply py-4 px-2 block bg-transparent;
+  @apply py-4 px-2 block bg-transparent text-xs sm:text-sm;
   border: initial;
   line-height: 1.8;
   counter-reset: line;
@@ -42,5 +43,5 @@ body {
 .prose pre code [data-line]::before {
   counter-increment: line;
   content: counter(line);
-  @apply inline-block w-8 mr-6 text-right text-muted;
+  @apply hidden sm:inline-block w-8 mr-6 text-right text-muted;
 }
